# blaze

./: .ocamlformat  README.md  blaze.opam
lib/: blaze_tmp.ml  blaze_tmp.mli  bqueue.ml  dns_static.ml  dns_static.mli  dune  email.ml  email.mli  git_miou_unix.ml  gr.ml  header.ml  header.mli  ldns.ml  mbox.ml  mbox.mli  mbox_lexer.mll  msyntax.ml  pack.ml  pack.mli  pop3.ml  pop3.mli  pop3_miou_unix.ml  pop3_miou_unix.mli  protocol.ml  protocol.mli  smart.ml  smart.mli  stem.ml  tree.ml  trim.ml
test/: 004.mail  005.mail  006.mail  007.mail  addr.t  arc.t  descr.t  dkim.t  dmarc.t  dune  hdr.t  iso.t  make.t  map.t  mdir.t  okapi.t  pack.t  put.t  recv.t  send.t  server.t  spf.t  submit.t  wrap.t
test/cache/: _dmarc.discoursemail.com.dns  _dmarc.github.com.dns  _dmarc.janestreet.com.dns  _netblocks.google.com.dns  _netblocks2.google.com.dns  _netblocks3.google.com.dns  _spf.google.com.dns  arc-20160816._domainkey.google.com.dns  arc-20240116._domainkey.subspace.kernel.org.dns  arcselector10001._domainkey.microsoft.com.dns  aspmx.pardot.com.dns  bloomberg.net.dns  brisbane._domainkey.football.example.com.dns  discoursemail.com.dns  et._spf.pardot.com.dns  github.com.dns  google._domainkey.janestreet.com.dns  janestreet.com.dns  k1._domainkey.mailchimpapp.net.dns  k1._domainkey.mcc.mcsv.net.dns  mail148.suw18.rsgsv.net.dns  pf2014._domainkey.github.com.dns  s20150108._domainkey.github.com.dns  sendgrid.net.dns  sgmail.github.com.dns  sjc2._domainkey.discoursemail.com.dns  smtpapi._domainkey.sendgrid.info.dns  whs1._domainkey.webhostingserver.nl.dns
test/mdir/new/: 1622812170.M896292P49016Q20332Rda344fc2d5d959f6.blaze
