opam-version: "2.0"
name: "blaze"
synopsis: "Tools to manipulate emails"
description: """\
Conan is a re-implementation in OCaml of the file command.
The library is system-agnostic and can be used with MirageOS."""
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/blaze"
doc: "https://dinosaure.github.io/blaze/"
bug-reports: "https://github.com/dinosaure/blaze/issues"
depends: [
  "ocaml" {>= "5.4.0"}
  "mrmime" {>= "0.7.1"}
  "bstr"
  "emile"
  "domain-name"
  "maildir"
  "astring"
  "base64"
  "bos"
  "dns"
  "cmdliner" {>= "1.1.0"}
  "colombe" {>= "0.7.0"}
  "sendmail" {>= "0.12.1"}
  "ca-certs"
  "tls"
  "dkim" {>= "0.9.0"}
  "dns-client" {>= "10.2.0"}
  "dns-client-miou-unix"
  "dune" {>= "2.8.5"}
  "fmt"
  "fpath"
  "logs"
  "ocamlgraph" {>= "2.0.0"}
  "ptime"
  "received"
  "uspf" {>= "0.0.2"}
  "uri" {>= "4.2.0"}
  "ipaddr" {>= "5.2.0"}
  "encore"
  "progress"
  "carton-miou"
  "dmarc"
  "arc"
  "stem"
  "bm25"
  "ke" {>= "0.4"}
  "mirage-crypto-rng-miou-unix"
  "sendmail-miou-unix"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/dinosaure/blaze.git"
pin-depends: [
  [ "maildir.dev"            "git+https://github.com/dinosaure/ocaml-maildir.git#597823c7d2d4fd2aef26a581f6828f2b458371ea" ]
  [ "carton.dev"             "git+https://github.com/robur-coop/carton.git#a7543fadc0c67c684a647551bf869faefe6b66b5" ]
  [ "carton-miou.dev"        "git+https://github.com/robur-coop/carton.git#a7543fadc0c67c684a647551bf869faefe6b66b5" ]
  [ "flux.dev"               "git+https://github.com/robur-coop/flux.git#55af39880aa080059396259fc126bb857374a989" ]
  [ "stem.dev"               "git+https://github.com/robur-coop/stem.git#66ce4f85ec2ad317ef2bd01bad71c93c0af68210" ]
  [ "bm25.dev"               "git+https://github.com/robur-coop/stem.git#66ce4f85ec2ad317ef2bd01bad71c93c0af68210" ]
  [ "mrmime.dev"             "git+https://github.com/mirage/mrmime.git#ffce7951d3df81d5555c0686489535e21e6443da" ]
]
