opam-version: "2.0"
name: "blaze"
synopsis: "Tools to manipulate emails"
description: """\
Conan is a re-implementation in OCaml of the file command.
The library is system-agnostic and can be used with MirageOS."""
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/blaze"
doc: "https://dinosaure.github.io/blaze/"
bug-reports: "https://github.com/dinosaure/blaze/issues"
depends: [
  "ocaml" {>= "5.4.0"}
  "mrmime" {>= "0.7.2"}
  "bstr"
  "emile"
  "domain-name"
  "maildir"
  "astring"
  "base64"
  "bos"
  "dns"
  "art"
  "flux"
  "fluxt"
  "bancos"
  "cmdliner" {>= "1.1.0"}
  "colombe" {>= "0.7.0"}
  "sendmail" {>= "0.12.1"}
  "ca-certs"
  "tls"
  "dkim" {>= "0.11.0"}
  "dns-client" {>= "10.2.0"}
  "dns-client-miou-unix"
  "dune" {>= "2.8.5"}
  "fmt"
  "fpath"
  "logs"
  "ocamlgraph" {>= "2.0.0"}
  "ptime"
  "received"
  "uspf" {>= "0.2.1"}
  "uri" {>= "4.2.0"}
  "ipaddr" {>= "5.2.0"}
  "encore"
  "progress"
  "carton-miou"
  "dmarc" {>= "0.0.2"}
  "arc" {>= "0.0.2"}
  "stem"
  "bm25"
  "ke" {>= "0.4"}
  "mirage-crypto-rng-miou-unix"
  "sendmail-miou-unix" {>= "0.13.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/dinosaure/blaze.git"
pin-depends: [
  [ "maildir.dev"            "git+https://github.com/dinosaure/ocaml-maildir.git#597823c7d2d4fd2aef26a581f6828f2b458371ea" ]
  [ "bancos.dev"             "git+https://github.com/robur-coop/bancos.git#1a17bcf88bde2ef8352d7f35162ab1f0d2849462" ]
  [ "rowex.dev"              "git+https://github.com/robur-coop/bancos.git#1a17bcf88bde2ef8352d7f35162ab1f0d2849462" ]
]
