(cram
 (deps
  001.mail
  002.mail
  003.mail
  004.mail
  (source_tree mdir)
  (source_tree cache)
  %{bin:blaze.make}
  %{bin:blaze.submit}
  %{bin:blaze.mdir}
  %{bin:blaze.dkim}
  %{bin:blaze.recv}
  %{bin:blaze.addr}
  %{bin:blaze.hdr}
  %{bin:blaze.map}
  %{bin:blaze.srv}
  %{bin:blaze.spf}))
